[package]
name = "graphtropy"
license = "GPL-3.0-or-later"
version = "1.0.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.33"
egui_plot = "0.34"
clap = { version = "4", features = ["derive"] }
rayon = "1"
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
tiny-skia = "0.11"
font8x8 = "0.3"
rfd = "0.15"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"
